2009-12-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Delete the boring "Empty queue" status messages in QueueStatusServer
        https://bugs.webkit.org/show_bug.cgi?id=32818

        * QueueStatusServer/app.yaml:
        * QueueStatusServer/cron.yaml:
        * QueueStatusServer/handlers/gc.py:
        * QueueStatusServer/main.py:

2009-12-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Exception on queue status server
        https://bugs.webkit.org/show_bug.cgi?id=32812

        Turns out we need to pass the id to the filter.

        * QueueStatusServer/filters/webkit_extras.py:
        * QueueStatusServer/templates/patch.html:
        * QueueStatusServer/templates/recentstatus.html:

2009-12-20  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Eric Seidel.

        Created "style" folder for code supporting check-webkit-style.

        * Scripts/modules/style: Added.

2009-12-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        REGRESSION: error when running commit-queue
        https://bugs.webkit.org/show_bug.cgi?id=32806

        Fix typo and add test!

        * Scripts/modules/bugzilla.py:
        * Scripts/modules/bugzilla_unittest.py:

2009-12-20  Adam Barth  <abarth@webkit.org>

        [bzt] Optimize status updates for new dashboard
        https://bugs.webkit.org/show_bug.cgi?id=32797

        This patch makes the queues slightly more chatty with the web service.
        Also, this patch introduces some testing for the queues!

        * Scripts/modules/commands/early_warning_system.py:
        * Scripts/modules/commands/early_warning_system_unittest.py: Added.
        * Scripts/modules/commands/queues.py:
        * Scripts/modules/commands/queues_unittest.py:
        * Scripts/modules/commands/queuestest.py: Added.
        * Scripts/modules/mock_bugzillatool.py:
        * Scripts/modules/patchcollection.py: