@@ -19,18 +19,51 @@ body {
 .pass {
     background-color: #8FDF5F;
     border: 1px solid #4F8530;
+    cursor: pointer;
 }
 .fail {
     background-color: #E98080;
     border: 1px solid #A77272;
+    cursor: pointer;
 }
 .pending {
     background-color: #FFFC6C;
     border: 1px solid #C5C56D;
+    cursor: pointer;
+}
+.error {
+  background-color: #E0B0FF;
+  border: 1px solid #ACA0B3;
+  cursor: pointer;
 }
 </style>
+<script>
+function statusDetail(patch_id) {
+  top.location = "/patch/" + patch_id
+}
+</script>
 </head>
-<body>{% for key, value in queue_status.items %}
-<div class="status {{value}}" title="{{key}}: {{value}}">{{key}}</div>{% endfor %}
+<body>
+<!-- FIXME: Find some way to remove this copy-and-paste code! -->
+<div class="status {{ summary.style_queue.state }}"{% if summary.style_queue.status %}
+    onclick="statusDetail({{ summary.attachment_id }})"
+    title="{{ summary.style_queue.status.date|timesince }}"{% endif %}>
+  style
+</div>
+<div class="status {{ summary.chromium_ews.state }}"{% if summary.chromium_ews.status %}
+    onclick="statusDetail({{ summary.attachment_id }})"
+    title="{{ summary.chromium_ews.status.date|timesince }} ago"{% endif %}>
+  chromium
+</div>
+<div class="status {{ summary.qt_ews.state }}"{% if summary.qt_ews.status %}
+    onclick="statusDetail({{ summary.attachment_id }})"
+    title="{{ summary.qt_ews.status.date|timesince }} ago"{% endif %}>
+  qt
+</div>
+<div class="status {{ summary.gtk_ews.state }}"{% if summary.gtk_ews.status %}
+    onclick="statusDetail({{ summary.attachment_id }})"
+    title="{{ summary.gtk_ews.status.date|timesince }} ago"{% endif %}>
+  gtk
+</div>
 </body>
 </html>
